--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 ---
-title: My Blog  <br>
+layout: default
+title: 我的Blog
 ---
 
-{{ page.title }}
+    　　<h2>{{ page.title }}</h2>
 
-{% for post in site.posts %}
+    　　<p>最新文章</p>
 
-{{ post.date|date_to_string }} <a href='{{ site.baseurl }}{{ post.url }}'>{{ post.title }}</a>
+    　　<ul>
 
-{% endfor %}
+    　　　　{% for post in site.posts %}
+
+    　　　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+
+    　　　　{% endfor %}
+
+    　　</ul>
+
+
